# libsvm

./: CMakeLists.txt  svm.cpp  svm.h
